<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_product" />
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_misproductos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_misproductos" />

        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_configuracion" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

    <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_exit" />
    </group>

</menu>