<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_product">

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.logingoogle.ui.home.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.logingoogle.ui.gallery.GalleryFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_misproductos"
        android:name="com.example.logingoogle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_misproductos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.logingoogle.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />
</navigation>